# cw-keyer

./: .gitignore  Cargo.toml  LICENSE  README.md  audio-out.py  decoder-wtype.py  gamepad-pipe-py  key-to-ctrl-press.py  mc-auto
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules-debug.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pers/zhc/android/morseime/: Configs.kt  KeyerActivity.kt  KeyerJNI.kt  MainActivity.kt  MorseIME.kt
android/app/src/main/res/drawable/: dah.xml  dah_btn_bg.xml  dah_btn_bg_pressed.xml  dit.xml  dit_btn_bg.xml  dit_btn_bg_pressed.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  key_btn_bg.xml  key_btn_bg_pressed.xml  selector_dah_btn.xml  selector_dit_btn.xml  selector_key_btn.xml
android/app/src/main/res/layout/: activity_keyer.xml  activity_main.xml  ime_candidates.xml  ime_input.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-zh/: strings.xml
android/app/src/main/res/xml/: method.xml
android/app/src/main/rust/: .gitignore  Cargo.toml  build.rs  keyer-lib
android/app/src/main/rust/src/: audio.rs  lib.rs
android/gradle/: libs.versions.toml
interface/: interface.ino  read-serial.c  read-serial.py
keyer-lib/: Cargo.toml
keyer-lib/src/: lib.rs
tests/: keyer_tests.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs
