[package]
name = "app_jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.15.1"
jni = "0.21.1"
keyer-lib = { path = "./keyer-lib" }
log = "0.4.32"
# https://github.com/RustAudio/cpal/issues/563#issuecomment-1271637282
oboe = { version = "0.6.1", features = ["java-interface", "shared-stdcxx"] }
